--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,41 @@
 
 	</dependencies>
 	<properties>
+		<browser>chrome</browser>
+		<runnerFile>RunAll</runnerFile>
 		<maven.compiler.source>11</maven.compiler.source>
 		<maven.compiler.target>11</maven.compiler.target>
 	</properties>
+
+	<build>
+		<testResources>
+			<testResource>
+				<directory>src/test/resources/config</directory>
+				<filtering>true</filtering>
+			</testResource>
+		</testResources>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.10.1</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.0.0-M7</version>
+				<configuration>
+					<includes>
+						<exclude>**/*${runnerFile}.java</exclude>
+					</includes>
+				</configuration>
+			</plugin>
+		</plugins>
+
+	</build>
+
 </project>
